hphp/hack/test/typecheck/nonnull/accessing_nonnull_as_array.php.exp
File "accessing_nonnull_as_array.php", line 4, characters 8-16:
This is not an object of type KeyedContainer, this is a nonnull value (Typing[4005])
File "accessing_nonnull_as_array.php", line 3, characters 12-18:
Definition is here
